fix sidebar z-index

--- a/components/Layout/Sidebar/SidebarToggle/style.sass
+++ b/components/Layout/Sidebar/SidebarToggle/style.sass
@@ -1,9 +1,7 @@
-@import 'components/common.sass'
-
 .sidebarToggle
   position: fixed
   left: -1px
-  z-index: 101
+  z-index: 1001
   background-color: white !important
 
   button
