--- a/components/Layout/Sidebar/style.sass
+++ b/components/Layout/Sidebar/style.sass
@@ -1,7 +1,2 @@
-@import 'components/common.sass'
-
 .sidebar
-  +translucent
-  border-left: none !important
-  border-radius: 0 !important
-  font-size: 110% !important
+  z-index: 1001 !important
